--- a/QRCodeSample/Base.lproj/Main.storyboard
+++ b/QRCodeSample/Base.lproj/Main.storyboard
@@ -99,11 +99,46 @@
                             <outlet property="delegate" destination="fK7-HC-JWj" id="0cs-WC-oxs"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="結果" id="qAF-Gi-8Ae"/>
+                    <navigationItem key="navigationItem" title="結果" id="qAF-Gi-8Ae">
+                        <barButtonItem key="rightBarButtonItem" title="QR生成" id="DDI-hc-5kQ">
+                            <connections>
+                                <segue destination="DCe-wq-rEb" kind="show" id="hp2-7K-5Ye"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h5T-Vv-hME" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-108" y="635"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="LIm-l7-9dR">
+            <objects>
+                <viewController id="DCe-wq-rEb" customClass="PDFViewController" customModule="QRCodeSample" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="anq-Dv-vZ8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bIX-ER-jy5">
+                                <rect key="frame" x="138.5" y="318.5" width="98" height="30"/>
+                                <state key="normal" title="QRコード生成"/>
+                                <connections>
+                                    <action selector="pdfAction:" destination="DCe-wq-rEb" eventType="touchUpInside" id="Xfx-Eq-EJa"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="bIX-ER-jy5" firstAttribute="centerY" secondItem="anq-Dv-vZ8" secondAttribute="centerY" id="ORB-nc-rLq"/>
+                            <constraint firstItem="bIX-ER-jy5" firstAttribute="centerX" secondItem="anq-Dv-vZ8" secondAttribute="centerX" id="ytL-IH-7a3"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="CII-hi-vbr"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="47U-2O-vqb"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cwv-5K-tl8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="761" y="635"/>
         </scene>
         <!--Camera View Controller-->
         <scene sceneID="w9k-Xy-7kD">
